# fast-library

./: .gitignore  docker-compose.yml  dump.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 192c8f9b3cce_add_m2m_orders_books.py  1953bd6b74ec_add_m2m_orders_books.py  2946d83a0e37_add_profile_model_with_mixins.py  39586ab511f1_add_constraint.py  3ff28a236070_add_models.py  4a2b9c434675_update_user_with_password_hash_field.py  75bff8c15a12_update_user_with_email.py  87ee68089239_add_constraint.py  8b4893d116a2_add_model_tag.py  8d6427d41e84_add_genre_book_models.py  9b5febf1d430_update_user_with_password_hash_field.py  d0ae446d8de8_add_m2m_relations.py  d4a34077bc08_add_m2m_orders_books.py  ef4678b1efb9_add_author_model_with_relation.py  fc287ae05b95_add_models_with_mixins.py
src/: __init__.py  config.py  database.py  dependencies.py  main.py  mixins.py  models.py
src/auth/: README.md  utils.py
src/authors/: crud.py  models.py  router.py  schemas.py  security.py
src/authors/routers/: __init__.py  profiles.py
src/books/: crud.py  models.py  schemas.py
src/books/routers/: __init__.py  books.py  genres.py  tags.py
src/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
src/orders/: crud.py  models.py  router.py  schemas.py
